first pass on some layout issues in day view

--- a/src/resources/postcss/tribe-events-full.pcss
+++ b/src/resources/postcss/tribe-events-full.pcss
@@ -576,9 +576,9 @@ select.tribe-events-dropdown {
 	}
 
 	.tribe-events-event-image {
+		display: inline-block;
 		float: left;
 		margin: 0 3% 0 0;
-		width: 30%;
 
 		img {
 			height: auto;
@@ -733,14 +733,14 @@ select.tribe-events-dropdown {
 /* = Single Event Template Styles
    @ Template: single-event.php
 =============================================*/
-.single-tribe_events h2.tribe-events-single-event-title {
+.single-tribe_events .tribe-events-single-event-title {
 	font-size: 1.7em;
 	line-height: 1;
 	margin: 0;
 	padding: 0;
 }
 
-#tribe-events-content .tribe-events-single-event-description  img.attachment-post-thumbnail {
+#tribe-events-content .tribe-events-single-event-description  .attachment-post-thumbnail {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
@@ -931,6 +931,26 @@ select.tribe-events-dropdown {
 		.type-tribe_events {
 			margin-left: 5%;
 		}
+	}
+}
+
+#tribe-events-day {
+	.type-tribe_events {
+		margin-left: 0;
+	}
+
+	.tribe-events-event-image {
+		display: inline-block;
+		float: left;
+		margin: 0 3% 0 0;
+		width: 30%;
+	}
+
+	.tribe-events-content {
+		display: inline-block;
+		float: right;
+		padding: 0;
+		width: 67%;
 	}
 }
 
